--- a/core/src/main/resources/reports/REP01_PRODUCT_WAREHOUSE.jrxml
+++ b/core/src/main/resources/reports/REP01_PRODUCT_WAREHOUSE.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="REP01_PRODUCT_WAREHOUSE" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6e352f10-4f39-46a1-adf2-b62ddd9c4fc6">
-	<property name="ireport.zoom" value="3.4522712143931114"/>
-	<property name="ireport.x" value="127"/>
-	<property name="ireport.y" value="91"/>
+	<property name="ireport.zoom" value="4.177248169415665"/>
+	<property name="ireport.x" value="414"/>
+	<property name="ireport.y" value="196"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
 	<style name="Column header" forecolor="#666666" fontName="Times New Roman" fontSize="14" isBold="true" pdfFontName="Times-Roman"/>
@@ -15,6 +15,7 @@
 	</style>
 	<parameter name="branchOffice" class="java.lang.String"/>
 	<parameter name="username" class="java.lang.String"/>
+	<parameter name="generatedDate" class="java.lang.String"/>
 	<field name="productName" class="java.lang.String"/>
 	<field name="category" class="java.lang.String"/>
 	<field name="stock" class="java.math.BigInteger"/>
@@ -46,7 +47,7 @@
 			<frame>
 				<reportElement mode="Opaque" x="2" y="110" width="172" height="20" backcolor="#C0C0C0" uuid="43e9879b-3b48-4603-be6f-94ac35f57f17"/>
 				<textField>
-					<reportElement x="3" y="0" width="41" height="20" uuid="f38d0809-07f5-4a45-98d7-9529b26fb7ee"/>
+					<reportElement x="3" y="0" width="45" height="20" uuid="f38d0809-07f5-4a45-98d7-9529b26fb7ee"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="Serif" isBold="true"/>
 					</textElement>
@@ -62,20 +63,20 @@
 					</textElement>
 					<textFieldExpression><![CDATA["Fecha:"]]></textFieldExpression>
 				</textField>
+				<textField>
+					<reportElement x="41" y="0" width="118" height="20" uuid="94535105-a7e4-446a-844d-cb50221c9ec1"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="Serif"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$P{generatedDate}]]></textFieldExpression>
+				</textField>
 			</frame>
 			<textField>
-				<reportElement x="46" y="110" width="128" height="20" forecolor="#000000" uuid="b0668c7a-be11-425b-8443-6407b3814c2c"/>
+				<reportElement x="50" y="110" width="117" height="20" forecolor="#000000" uuid="b0668c7a-be11-425b-8443-6407b3814c2c"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Serif" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{username}]]></textFieldExpression>
-			</textField>
-			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement style="Title" x="220" y="110" width="131" height="20" forecolor="#000000" uuid="d456c7b6-98ea-420b-86ec-10dd46c185d6"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="Serif" size="10" isBold="false"/>
-				</textElement>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<image>
 				<reportElement x="451" y="20" width="102" height="110" uuid="d1ab8362-8f1b-4d0b-8d99-9a54758db749"/>
