--- a/core/src/main/resources/reports/REP02_USER_SALES_REPORT.jrxml
+++ b/core/src/main/resources/reports/REP02_USER_SALES_REPORT.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="REP02_USER_SALES_REPORT" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6e352f10-4f39-46a1-adf2-b62ddd9c4fc6">
-	<property name="ireport.zoom" value="4.177248169415675"/>
-	<property name="ireport.x" value="451"/>
-	<property name="ireport.y" value="258"/>
+	<property name="ireport.zoom" value="5.054470284992971"/>
+	<property name="ireport.x" value="1010"/>
+	<property name="ireport.y" value="397"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
 	<style name="Column header" forecolor="#666666" fontName="Times New Roman" fontSize="14" isBold="true" pdfFontName="Times-Roman"/>
@@ -15,6 +15,7 @@
 	</style>
 	<parameter name="branchOffice" class="java.lang.String"/>
 	<parameter name="userPOS" class="java.lang.String"/>
+	<parameter name="generatedDate" class="java.lang.String"/>
 	<field name="salesDate" class="java.lang.String"/>
 	<field name="paymentMethod" class="java.lang.String"/>
 	<field name="client" class="java.lang.String"/>
@@ -51,7 +52,7 @@
 			<frame>
 				<reportElement mode="Opaque" x="2" y="110" width="172" height="20" backcolor="#C0C0C0" uuid="43e9879b-3b48-4603-be6f-94ac35f57f17"/>
 				<textField>
-					<reportElement x="3" y="0" width="41" height="20" uuid="f38d0809-07f5-4a45-98d7-9529b26fb7ee"/>
+					<reportElement x="3" y="0" width="45" height="20" uuid="f38d0809-07f5-4a45-98d7-9529b26fb7ee"/>
 					<textElement verticalAlignment="Middle">
 						<font fontName="Serif" isBold="true"/>
 					</textElement>
@@ -67,20 +68,20 @@
 					</textElement>
 					<textFieldExpression><![CDATA["Fecha:"]]></textFieldExpression>
 				</textField>
+				<textField>
+					<reportElement x="40" y="1" width="132" height="18" uuid="fa20ff18-9134-4c89-bd05-c41972236dbc"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="Serif"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$P{generatedDate}]]></textFieldExpression>
+				</textField>
 			</frame>
-			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement style="Title" x="221" y="110" width="132" height="20" forecolor="#000000" uuid="d456c7b6-98ea-420b-86ec-10dd46c185d6"/>
-				<textElement verticalAlignment="Middle">
-					<font fontName="Serif" size="10" isBold="false"/>
-				</textElement>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-			</textField>
 			<image>
 				<reportElement x="446" y="19" width="109" height="110" uuid="d1ab8362-8f1b-4d0b-8d99-9a54758db749"/>
 				<imageExpression><![CDATA["reports/coff.png"]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="46" y="110" width="128" height="20" uuid="8a85cc4a-0b10-498d-a3b3-25217006a660"/>
+				<reportElement x="50" y="110" width="114" height="20" uuid="8a85cc4a-0b10-498d-a3b3-25217006a660"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font fontName="Serif"/>
 				</textElement>
